--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "irl-showcase",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://nate-seligson.github.io/irl-showcase",
   "type": "module",
   "scripts": {
     "dev": "vite",
